# ratl

./: .gitignore  LICENSE  README  README.md  Setup.hs  package.yaml  ratl.cabal  stack.yaml
app/: Main.hs
doc/: semantics.latex
examples/: sum.ratl
examples/lemonade/: Makefile  lemonade.c  lemonade.hs
examples/ratl/: all.ratl  any.ratl  bubble.ratl  cart.ratl  drop.ratl  eratos.ratl  filtzero.ratl  id.ratl  insertion.ratl  last.ratl  length.ratl  loop.ratl  mono.ratl  multivar.ratl  nil.ratl  parser.ratl  parser_small.ratl  parser_tiny.ratl  preserve.ratl  product.ratl  quick.ratl  reverse.ratl  selection.ratl  sum.ratl  take.ratl  unzip.ratl  zero.ratl  zip.ratl
lib/: basis.ratl
src/: Main.hs
src/Bindings/Clp/: Clp.hs
src/Control/Monad/Except/: Extra.hs
src/Control/Monad/RWS/: Extra.hs
src/Data/: Fix.hs  Mapping.hs
src/Data/Clp/: Clp.hs  LinearFunction.hs  Managed.hs  Pretty.hs  Program.hs  StandardForm.hs
src/Data/Graph/Inductive/: Extra.hs
src/Language/Ratl/: Anno.hs  Ast.hs  Basis.hs  Elab.hs  Eval.hs  Index.hs  LinearFunFamily.hs  Parser.hs  Reader.hs  Ty.hs  Val.hs
src/ratl/Data/Graph/Inductive/: Extra.hs
src/ratl/Language/Ratl/: Anno.hs  Elab.hs  Eval.hs  Index.hs  LinearFunFamily.hs  Parser.hs  Reader.hs  Ty.hs  Val.hs
test/: Spec.hs
