name:                ratl
version:             0.1.0.0
synopsis:            Resource Aware Toy Language
description:         Resource Aware Toy Language
homepage:            https://github.com/natebragg/ratl#readme
license:             BSD3
license-file:        LICENSE
author:              Nate Bragg
maintainer:          Nate Bragg <nate@cs.tufts.edu>
copyright:           (c) 2017 Nate Bragg
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ratl
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bindings.Clp.Clp
                       Data.Clp.Clp
                       Data.Clp.Managed
                       Data.Clp.StandardForm
                       Language.Ratl.Ast
                       Language.Ratl.Elab
                       Language.Ratl.Eval
                       Language.Ratl.Ty
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, transformers
  extra-libraries:     Clp

source-repository head
  type:     git
  location: https://github.com/natebragg/ratl
