name:                ratl
version:             1.0.0.0
synopsis:            Resource Aware Toy Language
description:         Resource Aware Toy Language
homepage:            https://github.com/natebragg/ratl#readme
license:             BSD3
license-file:        LICENSE
author:              Nate Bragg
maintainer:          Nate Bragg <nate@cs.tufts.edu>
copyright:           (c) 2017 Nate Bragg
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Clp.Clp
                       Data.Clp.StandardForm
                       Language.Ratl.Ast
                       Language.Ratl.Anno
                       Language.Ratl.Basis
                       Language.Ratl.Elab
                       Language.Ratl.Eval
                       Language.Ratl.Parser
                       Language.Ratl.Ty
  other-modules:       Bindings.Clp.Clp
                       Data.Clp.Managed
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , parsec
  default-language:    Haskell2010
  extra-libraries:     Clp

executable ratl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ratl
                     , mtl
                     , transformers
                     , parsec
  default-language:    Haskell2010

test-suite ratl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ratl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/natebragg/ratl
