name:                ratl
version:             1.0.0.0
synopsis:            Resource-Aware Toy Language
description:         Resource-Aware Toy Language
homepage:            https://github.com/natebragg/ratl#readme
license:             BSD3
license-file:        LICENSE
author:              Nate Bragg
maintainer:          Nate Bragg <nate@cs.tufts.edu>
copyright:           (c) 2017 Nate Bragg
category:            Language
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.24 && < 2.1
                     , filepath

library
  hs-source-dirs:      src
  exposed-modules:     Data.Clp.Clp
                       Data.Clp.Program
                       Data.Clp.Pretty
                       Language.Ratl.Ast
                       Language.Ratl.Anno
                       Language.Ratl.Basis
                       Language.Ratl.Elab
                       Language.Ratl.Eval
                       Language.Ratl.Index
                       Language.Ratl.Parser
                       Language.Ratl.Reader
                       Language.Ratl.Ty
                       Language.Ratl.Val
  other-modules:       Bindings.Clp.Clp
                       Control.Monad.Except.Extra
                       Control.Monad.RWS.Extra
                       Data.Clp.Managed
                       Data.Clp.LinearFunction
                       Data.Fix
                       Data.Graph.Inductive.Extra
                       Data.Mapping
  build-depends:       algebra
                     , base >= 4.7 && < 5
                     , bytestring
                     , fgl
                     , file-embed
                     , mtl
                     , pretty
                     , transformers
                     , containers
                     , monoidal-containers
                     , parsec
  default-language:    Haskell2010
  extra-libraries:     Clp

executable ratl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       PackageInfo
  build-depends:       base
                     , ratl
                     , mtl
                     , transformers
                     , parsec
  default-language:    Haskell2010

test-suite ratl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ratl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/natebragg/ratl
